add auth token issue to endpoints
